force-app/main/default/objects/Household_Background__c/Household_Background__c.object-meta.xml
<CustomObject>
    <label>Household Background</label>
    <nameField>
        <displayFormat>HBID-{0000}</displayFormat>
        <label>Household Background ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Household Backgrounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>