force-app/main/default/objects/Household_Background__c/fields/Boarder_Renter_Id__c.field-meta.xml
<CustomField>
    <fullName>Boarder_Renter_Id__c</fullName>
    <displayFormat>BRID-{0000}</displayFormat>
    <label>Boarder/Renter Id</label>
    <type>AutoNumber</type>
</CustomField>