force-app/main/default/objects/Household_Background__c/fields/Boarder_Renters_Name__c.field-meta.xml
<CustomField>
    <fullName>Boarder_Renters_Name__c</fullName>
    <label>Boarder/Renters Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>