force-app/main/default/objects/Household_Background__c/fields/Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caregiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Household Backgrounds</relationshipLabel>
    <relationshipName>Household_Backgrounds</relationshipName>
    <type>Lookup</type>
</CustomField>