force-app/main/default/objects/Household_Background__c/fields/Color_Markings__c.field-meta.xml
<CustomField>
    <fullName>Color_Markings__c</fullName>
    <label>Color/Markings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>