force-app/main/default/objects/Household_Background__c/fields/Do_you_have_a_driver_s_license__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_driver_s_license__c</fullName>
    <label>Do you have a driver’s license?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>