force-app/main/default/objects/Household_Background__c/fields/Driving_Record_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Driving_Record_Check_Completed__c</fullName>
    <label>Driving Record Check Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>