force-app/main/default/objects/Household_Background__c/fields/End_Date_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Stay__c</fullName>
    <label>End Date of Stay (if applicable)</label>
    <type>Date</type>
</CustomField>