force-app/main/default/objects/Household_Background__c/fields/Expense_Category__c.field-meta.xml
<CustomField>
    <fullName>Expense_Category__c</fullName>
    <label>Expense Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent/mortgage</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Car Payments</fullName>
            </value>
            <value>
                <fullName>Car Insurance</fullName>
            </value>
            <value>
                <fullName>Other Insurance Loans/Debts</fullName>
            </value>
            <value>
                <fullName>Food, Clothing, etc.</fullName>
            </value>
            <value>
                <fullName>Other Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>