force-app/main/default/objects/Household_Background__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household Backgrounds</relationshipLabel>
    <relationshipName>Household_Backgrounds</relationshipName>
    <type>Lookup</type>
</CustomField>