force-app/main/default/objects/Household_Background__c/fields/Is_Current_Employment__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Employment__c</fullName>
    <label>Is Current Employment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>