force-app/main/default/objects/Household_Background__c/fields/License_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiration_Date__c</fullName>
    <label>License Expiration Date</label>
    <type>Date</type>
</CustomField>