force-app/main/default/objects/Household_Background__c/fields/Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Medical_Conditions__c</fullName>
    <label>Medical Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>