force-app/main/default/objects/Household_Background__c/fields/Medical_History_or_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Medical_History_or_Special_Needs__c</fullName>
    <label>Medical History or Special Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>