force-app/main/default/objects/Household_Background__c/fields/Omni_RowKey__c.field-meta.xml
<CustomField>
    <fullName>Omni_RowKey__c</fullName>
    <externalId>true</externalId>
    <label>Omni_RowKey</label>
    <length>80</length>
    <type>Text</type>
</CustomField>