force-app/main/default/objects/Household_Background__c/fields/Other_Expense__c.field-meta.xml
<CustomField>
    <fullName>Other_Expense__c</fullName>
    <label>Other Expense</label>
    <length>255</length>
    <type>Text</type>
</CustomField>