force-app/main/default/objects/Household_Background__c/fields/Pet_Id__c.field-meta.xml
<CustomField>
    <fullName>Pet_Id__c</fullName>
    <displayFormat>PID-{00000}</displayFormat>
    <label>Pet Id</label>
    <type>AutoNumber</type>
</CustomField>