force-app/main/default/objects/Household_Background__c/fields/Pets_Other_Animals__c.field-meta.xml
<CustomField>
    <fullName>Pets_Other_Animals__c</fullName>
    <label>Pets/Other Animals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>