force-app/main/default/objects/Household_Background__c/fields/Plans_for_Transporting_Child__c.field-meta.xml
<CustomField>
    <fullName>Plans_for_Transporting_Child__c</fullName>
    <label>Plans for Transporting Child</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>