force-app/main/default/objects/Household_Background__c/fields/Proof_of_valid_license_provided__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_valid_license_provided__c</fullName>
    <label>Proof of valid license provided?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>