force-app/main/default/objects/Household_Background__c/fields/Reason_for_Leaving__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Leaving__c</fullName>
    <label>Reason for Leaving</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>