force-app/main/default/objects/Household_Background__c/fields/Relationship_to_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Caregiver__c</fullName>
    <label>Relationship to Caregiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>