force-app/main/default/objects/Household_Background__c/fields/Rent_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Amount__c</fullName>
    <label>Rent Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>