force-app/main/default/objects/Household_Background__c/fields/Start_Date_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_of_Stay__c</fullName>
    <label>Start Date of Stay</label>
    <type>Date</type>
</CustomField>