force-app/main/default/objects/Household_Background__c/fields/Transportation_ID__c.field-meta.xml
<CustomField>
    <fullName>Transportation_ID__c</fullName>
    <displayFormat>TID-{0000}</displayFormat>
    <label>Transportation ID</label>
    <type>AutoNumber</type>
</CustomField>