force-app/main/default/objects/Household_Background__c/fields/Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Vaccinated__c</fullName>
    <label>Vaccinated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>