force-app/main/default/objects/Household_Background__c/recordTypes/Boarders_Renters_Information.recordType-meta.xml
<RecordType>
    <fullName>Boarders_Renters_Information</fullName>
    <active>true</active>
    <label>Boarders &amp; Renters Information</label>
</RecordType>