force-app/main/default/objects/Household_Background__c/recordTypes/Financial_Information.recordType-meta.xml
<RecordType>
    <fullName>Financial_Information</fullName>
    <active>true</active>
    <label>Financial Information</label>
</RecordType>