force-app/main/default/objects/Household_Background__c/recordTypes/Pet_Information.recordType-meta.xml
<RecordType>
    <fullName>Pet_Information</fullName>
    <active>true</active>
    <label>Pet Information</label>
</RecordType>