force-app/main/default/objects/Household_Background__c/recordTypes/Transportation_Information.recordType-meta.xml
<RecordType>
    <fullName>Transportation_Information</fullName>
    <active>true</active>
    <label>Transportation Information</label>
</RecordType>