force-app/main/default/objects/Household_Background__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Family__c</columns>
    <columns>Background_Check_Status__c</columns>
    <columns>Boarder_Renters_Name__c</columns>
    <columns>Employer_Name__c</columns>
    <columns>Do_you_have_a_car__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>